--- a/src/index.css
+++ b/src/index.css
@@ -8,6 +8,7 @@ html {
 }
 
 body {
+  background-color: #faf9f8;
   margin-bottom: 220px; /* Default footer height */
   height:100%;
   min-height: 100%;
