SCSS Support + Consolas font added

--- a/src/index.scss
+++ b/src/index.scss
@@ -53,6 +53,15 @@ main {
   font-display: swap;
 }
 
+@font-face {
+  font-family: 'Consolas';
+  src: url('fonts/Consolas/Consolas.woff2') format('woff2'),
+      url('fonts/Consolas/Consolas.woff') format('woff');
+  font-weight: normal;
+  font-style: normal;
+  font-display: swap;
+}
+
 
 
 /* Fix bootstrap outline when click */
