--- a/src/index.scss
+++ b/src/index.scss
@@ -332,3 +332,9 @@ button:focus,
 .homeIcon:hover {
   color: rgb(3, 98, 171) !important;
 }
+
+.organization .ms-Persona {
+  max-width: 50px;
+  margin-left: auto;
+  margin-right: auto;
+}
