--- a/src/slider.scss
+++ b/src/slider.scss
@@ -6,6 +6,8 @@
 
 .swiper-slide {
     text-align: center;
+    height: 100%;
+    min-height: 100%;
 }
 
 .swiper-pagination-bullets {
@@ -21,6 +23,21 @@
 .swiper-container-rtl .swiper-button-next:after {
     font-family: 'Consolas';
     content: '‹';
+}
+
+.swiper-button-next,
+.swiper-button-prev {
+    position: absolute;
+    top: 40%;
+    width: calc(var(--swiper-navigation-size)/ 44 * 27);
+    height: var(--swiper-navigation-size);
+    margin-top: calc(0px - (var(--swiper-navigation-size)/ 2));
+    z-index: 10;
+    cursor: pointer;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    color: var(--swiper-navigation-color, var(--swiper-theme-color));
 }
 
 .swiper-slide img { // Delete this if unnecessary
