--- a/src/index.css
+++ b/src/index.css
@@ -326,3 +326,7 @@ button:focus,
 footer .fab {
   font-size: 18px;
 }
+
+.MuiChip-label {
+  font-family: "Segoe UI", "Segoe UI Web (West European)", "Segoe UI", -apple-system, BlinkMacSystemFont, Roboto, "Helvetica Neue", sans-serif;
+}
