Rules section adjustments
Rules color is now more visible
Box background color adjusted for dark mode

--- a/src/index.scss
+++ b/src/index.scss
@@ -368,3 +368,7 @@ footer .fab {
 .MuiChip-label {
   font-family: "Segoe UI", "Segoe UI Web (West European)", "Segoe UI", -apple-system, BlinkMacSystemFont, Roboto, "Helvetica Neue", sans-serif;
 }
+
+.ms-MessageBar {
+  background: none;
+}
