--- a/src/index.scss
+++ b/src/index.scss
@@ -364,3 +364,11 @@ button:focus,
 footer .fab {
   font-size: 18px;
 }
+
+.MuiChip-label {
+  font-family: "Segoe UI", "Segoe UI Web (West European)", "Segoe UI", -apple-system, BlinkMacSystemFont, Roboto, "Helvetica Neue", sans-serif;
+}
+
+.ms-MessageBar {
+  background: none;
+}
