Added chips to cards and enhanced their description

--- a/src/index.scss
+++ b/src/index.scss
@@ -341,6 +341,10 @@ button:focus,
   display: inline;
 }
 
+.homeIcon {
+  color: #0481e0;
+}
+
 .homeIcon:hover {
   color: rgb(3, 98, 171) !important;
 }
