Data restructure for redirects and courses section restructure

--- a/src/index.css
+++ b/src/index.css
@@ -199,13 +199,13 @@ button:focus,
     text-align: center;
   }
 
-  .representatives .people-list .col-xs-12, .administrators .admin-list .col-xs-12 {
+  .representatives .people-list .col-xs-12, .courses .admin-list .col-xs-12 {
     margin-left: 15%;
     max-width: 250px;
     text-align: center;
   }
 
-  .representatives .people-list, .administrators .admin-list {
+  .representatives .people-list, .courses .admin-list {
     justify-content: center;
   }
 
