Rules section and data restructure

--- a/src/index.scss
+++ b/src/index.scss
@@ -293,6 +293,10 @@ button:focus,
   padding-left: 0 !important;
 }
 
+.rules .ms-Button-flexContainer {
+  margin: 10px;
+}
+
 .courses-filter-options .ms-MessageBar-text {
   justify-content: center !important;
   text-align: center !important;
