--- a/src/slider.scss
+++ b/src/slider.scss
@@ -14,6 +14,10 @@
     align-items: center;
 }
 
+.swiper-pagination-bullet-active {
+    background: #464646;
+}
+
 .swiper-button-next:after,
 .swiper-container-rtl .swiper-button-prev:after {
     font-family: 'Consolas';
@@ -38,6 +42,7 @@
     display: flex;
     align-items: center;
     justify-content: center;
+    color: #464646;
 }
 
 .swiper-slide img { // Delete this if unnecessary
