Color palettes in settings are now available (#211)
* SwatchColorPicker component added to settings panel

* Palette cookie is now working correctly + Little fix on cookies declaration in headerMenu

This fix will help the dev of language switch

* Global adjustments to set palette correctly

* Fixed swiper elements colors

* Added semibold text to extragroups title

* Color palettes feature is now complete

* Added Manuele D. to CAN members + New palette

* Added e_magon to ssri admins

* lightTheme and darkTheme different functions for building

* Palette changing not working properly almost fixed

Courses is still bugged for some reasons.

* Courses palette bug solved

--- a/src/slider.scss
+++ b/src/slider.scss
@@ -14,7 +14,8 @@
     align-items: center;
 }
 
-.swiper-pagination-bullets {
+.swiper-pagination-bullet-active {
+    background: #464646;
 }
 
 .swiper-button-next:after,
@@ -41,7 +42,7 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    color: var(--swiper-navigation-color, var(--swiper-theme-color));
+    color: #464646;
 }
 
 .swiper-slide img { // Delete this if unnecessary
