--- a/src/index.scss
+++ b/src/index.scss
@@ -227,9 +227,11 @@ button:focus,
     max-width: 250px;
   }
 
+  /*
   .home .col-12 {
     max-width: 280px;
   }
+  */
 }
 
 @media only screen and (min-width: 481px) {
