--- a/src/index.scss
+++ b/src/index.scss
@@ -227,6 +227,10 @@ button:focus,
     max-width: 250px;
   }
 
+  .home .telegram-advantages-list {
+    margin-left: 20% !important;
+  }
+
   /*
   .home .col-12 {
     max-width: 280px;
