Several home adjustments and vaccine news (#241)
* Card to show informations about vaccines

* Added icons to buttons in homepage

* Several home improvements

* Changed persona image and adjusted wiki icon

* Changed news image

* Delete news_full_size.png

* Full translation of new features and adjustments

* Fix "Clicca qui per maggiori informazioni"

* Full translate of new sections

* Update HomeView.tsx

* News date translated

* Update LocalizationService.ts

* Update HomeView.tsx

--- a/src/index.scss
+++ b/src/index.scss
@@ -227,9 +227,15 @@ button:focus,
     max-width: 250px;
   }
 
+  .home .telegram-advantages-list {
+    margin-left: 20% !important;
+  }
+
+  /*
   .home .col-12 {
     max-width: 280px;
   }
+  */
 }
 
 @media only screen and (min-width: 481px) {
