--- a/src/index.css
+++ b/src/index.css
@@ -203,9 +203,15 @@ button:focus,
     max-width: 250px;
   }
 
+  .home .telegram-advantages-list {
+    margin-left: 20% !important;
+  }
+
+  /*
   .home .col-12 {
     max-width: 280px;
   }
+  */
 }
 @media only screen and (min-width: 481px) {
   .rules .row .col-xs-12 {
