--- a/src/index.scss
+++ b/src/index.scss
@@ -73,6 +73,11 @@ button:focus,
     margin-left:25%;
     margin-right: 25%;
   }
+
+  footer .text {
+    margin-left: 15%;
+    margin-right: 15%;
+  }
 }
 
 @media only screen and (max-width: 485px) {
@@ -127,7 +132,7 @@ button:focus,
 }
 
 
-@media only screen and (min-width: 592px) {
+@media only screen and (min-width: 567px) {
   .header-title .large-display {
     display:block;
   }
@@ -137,7 +142,7 @@ button:focus,
   }
 }
 
-@media only screen and (max-width: 591px) {
+@media only screen and (max-width: 566px) {
   .header-title .large-display {
     display:none;
   }
