--- a/src/index.scss
+++ b/src/index.scss
@@ -358,6 +358,10 @@ footer .fab {
   opacity: 0;
 }
 
+.degree-informations .ms-ChoiceField-labelWrapper {
+  overflow: visible;
+}
+
 .degree-informations .ms-ChoiceFieldGroup-flexContainer {
   display: flex;
   justify-content: center;
