--- a/src/index.css
+++ b/src/index.css
@@ -251,27 +251,12 @@ button:focus,
     margin-bottom: 10px !important;
   }
 }
-.ms-MessageBar-icon {
-  display: none;
-  position: absolute;
-}
-
 .rules a {
   padding-left: 0 !important;
 }
 
 .rules .ms-Button-flexContainer {
   margin: 10px;
-}
-
-.courses-filter-options .ms-MessageBar-text {
-  justify-content: center !important;
-  text-align: center !important;
-}
-
-.courses-filter-options .ms-MessageBar-icon {
-  display: flex !important;
-  position: relative !important;
 }
 
 .header-menu .ms-Dropdown-title {
@@ -312,14 +297,14 @@ footer .fab {
   font-size: 11px;
 }
 
-.ms-MessageBar {
-  background: none;
-}
-
 .organization .ms-Card {
   min-width: 100px !important;
 }
 
 .course-list .ms-Persona-primaryText {
   font-weight: 600;
+}
+
+.ms-MessageBar-dismissSingleLine {
+  display: none;
 }
