--- a/src/index.scss
+++ b/src/index.scss
@@ -284,10 +284,6 @@ button:focus,
   }
 }
 
-.ms-MessageBar-icon {
-  display: none;
-  position: absolute;
-}
 
 .rules a {
   padding-left: 0 !important;
@@ -297,15 +293,7 @@ button:focus,
   margin: 10px;
 }
 
-.courses-filter-options .ms-MessageBar-text {
-  justify-content: center !important;
-  text-align: center !important;
-}
 
-.courses-filter-options .ms-MessageBar-icon {
-  display: flex !important;
-  position: relative !important;
-}
 
 .header-menu .ms-Dropdown-title {
   line-height: 45px;
@@ -343,9 +331,7 @@ footer .fab {
   font-size: 11px;
 }
 
-.ms-MessageBar {
-  background: none;
-}
+
 
 .organization .ms-Card {
   min-width: 100px !important;
@@ -353,4 +339,8 @@ footer .fab {
 
 .course-list .ms-Persona-primaryText {
   font-weight: 600;
+}
+
+.ms-MessageBar-dismissSingleLine {
+  display: none;
 }
