--- a/src/index.scss
+++ b/src/index.scss
@@ -272,16 +272,9 @@ button:focus,
   }
 }
 
-
-.rules a {
-  padding-left: 0 !important;
-}
-
 .rules .ms-Button-flexContainer {
   margin: 10px;
 }
-
-
 
 .header-menu .ms-Dropdown-title {
   line-height: 45px;
@@ -310,16 +303,10 @@ button:focus,
   width: 48px;
 }
 
-footer .fab {
-  font-size: 18px;
-}
-
 .MuiChip-label {
   font-family: "Segoe UI", "Segoe UI Web (West European)", "Segoe UI", -apple-system, BlinkMacSystemFont, Roboto, "Helvetica Neue", sans-serif;
   font-size: 11px;
 }
-
-
 
 .organization .ms-Card {
   min-width: 100px !important;
@@ -331,6 +318,10 @@ footer .fab {
 
 .ms-MessageBar-dismissSingleLine {
   display: none;
+}
+
+.ms-MessageBar-text {
+  display: block;
 }
 
 /* ChoiceGroup in DegreeInformations adjustments */
