Courses section restructure of wiki info

--- a/src/index.scss
+++ b/src/index.scss
@@ -282,7 +282,11 @@ button:focus,
 }
 
 .rules .ms-Button-flexContainer {
-  margin: 10px;
+  margin: 7px;
+}
+
+.courses .ms-Button-flexContainer {
+  margin: 5px;
 }
 
 .courses-filter-options .ms-MessageBar-text {
