DegreeInformations message showing if there are none available + Some adjustments

--- a/src/index.scss
+++ b/src/index.scss
@@ -316,6 +316,7 @@ button:focus,
   font-weight: 600;
 }
 
+/* MessageBar component adjustments */
 .ms-MessageBar-dismissSingleLine {
   display: none;
 }
