--- a/src/index.css
+++ b/src/index.css
@@ -287,6 +287,7 @@ button:focus,
   font-weight: 600;
 }
 
+/* MessageBar component adjustments */
 .ms-MessageBar-dismissSingleLine {
   display: none;
 }
