Courses section restructure of wiki info (#254)
* Courses section restructure of wiki info

* Adjust dialog width and margins

--- a/src/index.css
+++ b/src/index.css
@@ -251,7 +251,11 @@ button:focus,
 }
 
 .rules .ms-Button-flexContainer {
-  margin: 10px;
+  margin: 7px;
+}
+
+.courses .ms-Button-flexContainer {
+  margin: 5px;
 }
 
 .courses-filter-options .ms-MessageBar-text {
@@ -332,4 +336,18 @@ footer .fab {
 .degree-informations .ms-ChoiceFieldGroup-flexContainer {
   display: flex;
   justify-content: center;
+}
+
+/* Dialog component adjustments */
+.ms-Dialog-main {
+  margin-left: 10px;
+  margin-right: 10px;
+}
+
+@media only screen and (max-width: 480px) {
+  .ms-Dialog-main {
+    width: auto !important;
+    margin-left: 10px;
+    margin-right: 10px;
+  }
 }
