--- a/src/index.scss
+++ b/src/index.scss
@@ -272,31 +272,12 @@ button:focus,
   }
 }
 
-.ms-MessageBar-icon {
-  display: none;
-  position: absolute;
-}
-
-.rules a {
-  padding-left: 0 !important;
-}
-
 .rules .ms-Button-flexContainer {
   margin: 7px;
 }
 
 .courses .ms-Button-flexContainer {
   margin: 5px;
-}
-
-.courses-filter-options .ms-MessageBar-text {
-  justify-content: center !important;
-  text-align: center !important;
-}
-
-.courses-filter-options .ms-MessageBar-icon {
-  display: flex !important;
-  position: relative !important;
 }
 
 .header-menu .ms-Dropdown-title {
@@ -326,17 +307,9 @@ button:focus,
   width: 48px;
 }
 
-footer .fab {
-  font-size: 18px;
-}
-
 .MuiChip-label {
   font-family: "Segoe UI", "Segoe UI Web (West European)", "Segoe UI", -apple-system, BlinkMacSystemFont, Roboto, "Helvetica Neue", sans-serif;
   font-size: 11px;
-}
-
-.ms-MessageBar {
-  background: none;
 }
 
 .organization .ms-Card {
@@ -347,9 +320,14 @@ footer .fab {
   font-weight: 600;
 }
 
+/* MessageBar component adjustments */
+.ms-MessageBar-dismissSingleLine {
+  display: none;
+}
 
-
-
+.ms-MessageBar-text {
+  display: block;
+}
 
 /* ChoiceGroup in DegreeInformations adjustments */
 .degree-informations .ms-ChoiceField-field:hover::before,
