--- a/src/index.scss
+++ b/src/index.scss
@@ -108,7 +108,15 @@ button:focus,
 
 
 /* Responsive menu and title */
-@media only screen and (min-width: 426px) {
+@media only screen and (min-width: 587px) {
+  header .large-display {
+    display: block;
+  }
+
+  header .small-display {
+    display: none;
+  }
+
   .header-menu .pivot {
     display: block;
   }
@@ -116,12 +124,17 @@ button:focus,
   .header-menu .dropdown {
     display: none;
   }
-
-  .header-menu .ms-FocusZone {  /* Header menu left margin on large displays */
-    margin-left: 10px;
-  }
 }
-@media only screen and (max-width: 425px) {
+
+@media only screen and (max-width: 586px) {
+  header .large-display {
+    display: none;
+  }
+
+  header .small-display {
+    display: block;
+  }
+
   .header-menu .pivot {
     display: none;
   }
@@ -129,33 +142,20 @@ button:focus,
   .header-menu .dropdown {
     display: block;
   }
-}
 
-
-@media only screen and (min-width: 567px) {
-  .header-title .large-display {
-    display:block;
+  .header-menu .ms-Dropdown-title {
+    display: none;
   }
 
-  .header-title .small-display {
-    display:none;
-  }
-}
-
-@media only screen and (max-width: 566px) {
-  .header-title .large-display {
-    display:none;
+  .header-menu .ms-Dropdown-container {
+    float:right;
+    width:30px;
   }
 
-  .header-title .small-display {
-    display:block;
-  }
-
-  .header-title .small-display .logo-text {
-    margin-left:-5%;
+  .header-menu .ms-Dropdown-caretDownWrapper {
+    right: 6px;
   }
 }
-
 
 
 
@@ -362,4 +362,10 @@ button:focus,
     margin-left:10px;
     margin-right:10px;
   }
+}
+
+/* Header Adjustments */
+header .ms-Image-image {
+  display: inline;
+  margin-bottom: 9px !important;
 }
