--- a/src/index.scss
+++ b/src/index.scss
@@ -109,14 +109,11 @@ button:focus,
 
 /* Responsive menu and title */
 @media only screen and (min-width: 587px) {
-  header .large-display {
-    display: block;
+  header .headerRow {
+    margin-left: 1rem!important;
+    margin-right: 1rem !important;
+    margin-bottom: 0 !important;
   }
-
-  header .small-display {
-    display: none;
-  }
-
   .header-menu .pivot {
     display: block;
   }
@@ -127,12 +124,10 @@ button:focus,
 }
 
 @media only screen and (max-width: 586px) {
-  header .large-display {
-    display: none;
-  }
-
-  header .small-display {
-    display: block;
+  header .headerRow {
+    margin-left: .5rem !important;
+    margin-right: .25rem !important;
+    margin-bottom: 0 !important;
   }
 
   .header-menu .pivot {
