Header restructure and news section (#259)
- Header restructure (desktop and mobile view);
- Fluent UI updated to v8.30.1;
- Fixed website language initialization;
- Minor adjustments suggested by @ManueleDentello.

Closes #258
Closes #257
Closes #256
Closes #260

--- a/src/index.css
+++ b/src/index.css
@@ -96,7 +96,13 @@ button:focus,
   }
 }
 /* Responsive menu and title */
-@media only screen and (min-width: 780px) {
+@media only screen and (min-width: 587px) {
+  header .headerRow {
+    margin-left: 1rem !important;
+    margin-right: 1rem !important;
+    margin-bottom: 0 !important;
+  }
+
   .header-menu .pivot {
     display: block;
   }
@@ -104,13 +110,14 @@ button:focus,
   .header-menu .dropdown {
     display: none;
   }
-
-  .header-menu .ms-FocusZone {
-    /* Header menu left margin on large displays */
-    margin-left: 10px;
-  }
 }
-@media only screen and (max-width: 779px) {
+@media only screen and (max-width: 586px) {
+  header .headerRow {
+    margin-left: 0.5rem !important;
+    margin-right: 0.25rem !important;
+    margin-bottom: 0 !important;
+  }
+
   .header-menu .pivot {
     display: none;
   }
@@ -118,27 +125,18 @@ button:focus,
   .header-menu .dropdown {
     display: block;
   }
-}
-@media only screen and (min-width: 567px) {
-  .header-title .large-display {
-    display: block;
-  }
 
-  .header-title .small-display {
-    display: none;
-  }
-}
-@media only screen and (max-width: 566px) {
-  .header-title .large-display {
+  .header-menu .ms-Dropdown-title {
     display: none;
   }
 
-  .header-title .small-display {
-    display: block;
+  .header-menu .ms-Dropdown-container {
+    float: right;
+    width: 30px;
   }
 
-  .header-title .small-display .logo-text {
-    margin-left: -5%;
+  .header-menu .ms-Dropdown-caretDownWrapper {
+    right: 6px;
   }
 }
 /* Dropdown style for header-menu */
@@ -332,4 +330,9 @@ button:focus,
     margin-left: 10px;
     margin-right: 10px;
   }
+}
+/* Header Adjustments */
+header .ms-Image-image {
+  display: inline;
+  margin-bottom: 9px !important;
 }
