Adjustments of responsive behaviour and text align right for telegram button

--- a/src/index.css
+++ b/src/index.css
@@ -39,6 +39,12 @@ button:focus,
   box-shadow: none !important;
 }
 
+/* Align text when in mobile view */
+@media only screen and (max-width: 992px) {
+  .center-mobile {
+    text-align: center;
+  }
+}
 /* Responsive footer */
 @media only screen and (max-width: 992px) {
   body {
@@ -75,17 +81,17 @@ button:focus,
 }
 @media only screen and (max-width: 485px) {
   body {
-    margin-bottom: 550px;
+    margin-bottom: 540px;
   }
 }
 @media only screen and (max-width: 363px) {
   body {
-    margin-bottom: 560px;
+    margin-bottom: 550px;
   }
 }
 @media only screen and (max-width: 320px) {
   body {
-    margin-bottom: 570px;
+    margin-bottom: 560px;
   }
 }
 @media only screen and (min-width: 767px) {
