--- a/src/index.scss
+++ b/src/index.scss
@@ -11,7 +11,7 @@ body {
   margin: 0;
   padding: 0;
   background-color: #faf9f8;
-  margin-bottom: 220px; /* Default footer height */
+  margin-bottom: 191px; /* Default footer height */
   height:100%;
 }
 
@@ -52,7 +52,7 @@ button:focus,
 /* Responsive footer */
 @media only screen and (max-width: 992px) {
   body {
-    margin-bottom: 240px;
+    margin-bottom: 191px;
   }
 }
 
@@ -64,7 +64,7 @@ button:focus,
 
 @media only screen and (max-width: 767px) {
   body {
-    margin-bottom: 480px;
+    margin-bottom: 469px;
   }
 
   footer .row {
@@ -328,6 +328,7 @@ button:focus,
 
 .ms-MessageBar-text {
   display: block;
+  text-align: center;
 }
 
 /* ChoiceGroup in DegreeInformations adjustments */
