OrganizationView is almost done

--- a/src/index.scss
+++ b/src/index.scss
@@ -298,11 +298,13 @@ button:focus,
   display: inline;
 }
 
+/* This was used for Persona component without text
 .organization .ms-Persona {
   max-width: 50px;
   margin-left: auto;
   margin-right: auto;
 }
+*/
 
 .contributors .ms-Persona {
   width: 48px;
